<resources>
    <string name="app_name">MedicationTracker</string>
    <string name="tutorial_skip">Skip</string>
    <string name="tutotial_title_1">Intro 1</string>
    <string name="tutotial_description_1">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="tutotial_title_2">Intro 2</string>
    <string name="tutotial_title_3">Intro 3</string>
    <string name="tutotial_description_2">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</string>
    <string name="tutotial_description_3">Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat.</string>
    <string name="tutorial_get_started">Get started</string>
    <string name="home_blood_type">Blood type:</string>
    <string name="home_summary">Summary</string>
    <string name="home_add_symptoms">Add Symptoms</string>
    <string name="home_add_medication">Add medication</string>
    <string name="home_reminder_question">Have you taken your medication?</string>
    <string name="home_years_old">years old</string>
    <string name="add_medication_title">Add Prescribed Medication</string>
    <string name="add_medication_name">Medication name</string>
    <string name="add_medication_form">Form</string>
    <string name="add_medication_dose">Dose</string>
    <string name="add_medication_tablet">Tablet</string>
    <string name="add_medication_frequency">Frequency (per day)</string>
    <string name="add_medication_take_medication">Take medication</string>
    <string name="add_medication_before">Before</string>
    <string name="add_medication_vertical_bar">|</string>
    <string name="add_medication_after">After</string>
    <string name="add_medication_meal">meal.</string>
    <string name="add_medication_select_time">Select Time</string>
    <string name="add_medication_save">Save</string>
    <string name="add_medication_doctor_visit_date">Date of doctor\'s visit</string>
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="low_storage_error">Ocr dependencies cannot be downloaded due to low device storage</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="ocr_skip">Skip</string>
    <string name="message_medication_name_empty">Medication name cannot be empty</string>
    <string name="message_medication_visit_date_empty">Visit date cannot be empty</string>
    <string name="message_medication_times_empty">Add at least 1 time.</string>
    <string name="home_no_medications_message">You have not added any medication.</string>
    <string name="home_yes">Yes</string>
    <string name="medication_frequency">%d times a day</string>
    <string name="medication_before_meal">Before meal</string>
    <string name="medication_after_meal">After meal</string>
    <string name="add_symptoms_title">Add Symptoms</string>
    <string name="add_symptoms_couch">Couch</string>
    <string name="add_symptoms_mild">Mild</string>
    <string name="add_symptoms_moderate">Moderate</string>
    <string name="add_symptoms_severe">Severe</string>
    <string name="add_symptoms_wheeze">Wheeze</string>
    <string name="add_symptoms_other_symptoms">Other symptoms</string>
    <string name="summary_title">Summary</string>
    <string name="summary_record_value">%d %s of %s taken</string>
    <string name="symptom_severity_mild">Mild</string>
    <string name="symptom_severity_moderate">Moderate</string>
    <string name="symptom_severity_severe">Severe</string>
    <string name="summary_symptoms_value">%s couch\n%s wheeze\n%s</string>
</resources>
